--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,25 @@
 # Dependencies
-node_modules
-
-# Production build
-dist
+node_modules/
 
 # Environment variables
 .env
 .env.local
-.env.development.local
-.env.production.local
+.env.production
+
+# Build output
+dist/
+build/
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# OS
+.DS_Store
+Thumbs.db
 
 # Logs
-npm-debug.log*
 *.log
-
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
-.DS_Store
-
-# Vite
-.vite
+npm-debug.log*
